{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 352,
  "lineage": "3509e9f2-1775-4d36-4698-c9f75d25a3fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da9d4c751fe8a0ec",
            "domain": "vpc",
            "id": "eipalloc-0da9d4c751fe8a0ec",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-86-51-7.compute-1.amazonaws.com",
            "public_ip": "54.86.51.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-vpc-192-170-0-0"
            },
            "tags_all": {
              "Name": "nat-eip-vpc-192-170-0-0"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863828529338:internet-gateway/igw-014959034dabcf633",
            "id": "igw-014959034dabcf633",
            "owner_id": "863828529338",
            "tags": {
              "Name": "igw-vpc-192-170-0-0"
            },
            "tags_all": {
              "Name": "igw-vpc-192-170-0-0"
            },
            "vpc_id": "vpc-054220692595539c3"
          },
          "dependencies": [
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da9d4c751fe8a0ec",
            "connectivity_type": "public",
            "id": "nat-06e80c2f99386f0b6",
            "network_interface_id": "eni-0d3df5eac5757f8a1",
            "private_ip": "192.170.66.57",
            "public_ip": "54.86.51.7",
            "subnet_id": "subnet-0351cd28160da1e45",
            "tags": {
              "Name": "nat-gw-vpc-192-170-0-0"
            },
            "tags_all": {
              "Name": "nat-gw-vpc-192-170-0-0"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip-vpc-192-170-0-0",
            "aws_internet_gateway.igw-vpc-192-170-0-0",
            "aws_subnet.public-us-east-1a-vpc-192-170-0-0",
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863828529338:route-table/rtb-0d145b462f13c7b8a",
            "id": "rtb-0d145b462f13c7b8a",
            "owner_id": "863828529338",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e80c2f99386f0b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-vpc-192-170-0-0"
            },
            "tags_all": {
              "Name": "private-vpc-192-170-0-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-054220692595539c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip-vpc-192-170-0-0",
            "aws_internet_gateway.igw-vpc-192-170-0-0",
            "aws_nat_gateway.nat-gw-vpc-192-170-0-0",
            "aws_subnet.public-us-east-1a-vpc-192-170-0-0",
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863828529338:route-table/rtb-0d92d853a7fcb619c",
            "id": "rtb-0d92d853a7fcb619c",
            "owner_id": "863828529338",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014959034dabcf633",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-vpc-192-170-0-0"
            },
            "tags_all": {
              "Name": "public-vpc-192-170-0-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-054220692595539c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-vpc-192-170-0-0",
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d63c95958d8a1ba5",
            "route_table_id": "rtb-0d145b462f13c7b8a",
            "subnet_id": "subnet-03c851138ffa0e136"
          },
          "dependencies": [
            "aws_eip.nat-eip-vpc-192-170-0-0",
            "aws_internet_gateway.igw-vpc-192-170-0-0",
            "aws_nat_gateway.nat-gw-vpc-192-170-0-0",
            "aws_route_table.private-vpc-192-170-0-0",
            "aws_subnet.private-us-east-1a-vpc-192-170-0-0",
            "aws_subnet.public-us-east-1a-vpc-192-170-0-0",
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1b20263a5fa7a0a",
            "route_table_id": "rtb-0d145b462f13c7b8a",
            "subnet_id": "subnet-0aceb2ebd202a9ba4"
          },
          "dependencies": [
            "aws_eip.nat-eip-vpc-192-170-0-0",
            "aws_internet_gateway.igw-vpc-192-170-0-0",
            "aws_nat_gateway.nat-gw-vpc-192-170-0-0",
            "aws_route_table.private-vpc-192-170-0-0",
            "aws_subnet.private-us-east-1b-vpc-192-170-0-0",
            "aws_subnet.public-us-east-1a-vpc-192-170-0-0",
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0030c02d937af1e8a",
            "route_table_id": "rtb-0d92d853a7fcb619c",
            "subnet_id": "subnet-0351cd28160da1e45"
          },
          "dependencies": [
            "aws_internet_gateway.igw-vpc-192-170-0-0",
            "aws_route_table.public-vpc-192-170-0-0",
            "aws_subnet.public-us-east-1a-vpc-192-170-0-0",
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0030c02d937af1e8a",
            "route_table_id": "rtb-0d92d853a7fcb619c",
            "subnet_id": "subnet-0351cd28160da1e45"
          },
          "dependencies": [
            "aws_internet_gateway.igw-vpc-192-170-0-0",
            "aws_route_table.public-vpc-192-170-0-0",
            "aws_subnet.public-us-east-1a-vpc-192-170-0-0",
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863828529338:subnet/subnet-03c851138ffa0e136",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.170.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c851138ffa0e136",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863828529338",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a-vpc-192-170-0-0",
              "kubernetes.io/cluster/cluster-vpc-192-170-0-0": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a-vpc-192-170-0-0",
              "kubernetes.io/cluster/cluster-vpc-192-170-0-0": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-054220692595539c3"
          },
          "dependencies": [
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863828529338:subnet/subnet-0aceb2ebd202a9ba4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.170.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aceb2ebd202a9ba4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863828529338",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b-vpc-192-170-0-0",
              "kubernetes.io/cluster/cluster-vpc-192-170-0-0": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b-vpc-192-170-0-0",
              "kubernetes.io/cluster/cluster-vpc-192-170-0-0": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-054220692595539c3"
          },
          "dependencies": [
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863828529338:subnet/subnet-0351cd28160da1e45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.170.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0351cd28160da1e45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "863828529338",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a-vpc-192-170-0-0",
              "kubernetes.io/cluster/cluster-vpc-192-170-0-0": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a-vpc-192-170-0-0",
              "kubernetes.io/cluster/cluster-vpc-192-170-0-0": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-054220692595539c3"
          },
          "dependencies": [
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b-vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863828529338:subnet/subnet-0d429b382c439dec1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.170.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d429b382c439dec1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "863828529338",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b-vpc-192-170-0-0",
              "kubernetes.io/cluster/cluster-vpc-192-170-0-0": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b-vpc-192-170-0-0",
              "kubernetes.io/cluster/cluster-vpc-192-170-0-0": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-054220692595539c3"
          },
          "dependencies": [
            "aws_vpc.vpc-192-170-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-192-170-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863828529338:vpc/vpc-054220692595539c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.170.0.0/16",
            "default_network_acl_id": "acl-0eeae1d302f9f7708",
            "default_route_table_id": "rtb-05103d12997cd8d7e",
            "default_security_group_id": "sg-012856202502eafd9",
            "dhcp_options_id": "dopt-040f9c9c18d0416dc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-054220692595539c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05103d12997cd8d7e",
            "owner_id": "863828529338",
            "tags": {
              "Name": "vpc-192-170-0-0"
            },
            "tags_all": {
              "Name": "vpc-192-170-0-0"
            }
          }
        }
      ]
    }
  ]
}